@@ -1,0 +1,36 @@
+/* XPM */
+static char * etqw_xpm[] = {
+"16 16 17 1",
+" 	c None",
+".	c #1C1E1C",
+"+	c #33332F",
+"@	c #4A4841",
+"#	c #61605E",
+"$	c #7E715E",
+"%	c #757673",
+"&	c #838585",
+"*	c #89877C",
+"=	c #9A8D76",
+"-	c #959797",
+";	c #9C998B",
+">	c #A3A5A3",
+",	c #A8A899",
+"'	c #AFAC93",
+")	c #BABAB3",
+"!	c #D6D7D1",
+"#--->->#%---->-#",
+"+>>>>>-#+->--&-+",
+" &))+..  %&>-&@+",
+" ;)!!!&   @>>&  ",
+" ;)!#@@   +;,*  ",
+" *,''),$   $;*  ",
+" $&,''&&> &>=;% ",
+" #     %!  !@=% ",
+" #     %>> )-@% ",
+" &     &%! >)*  ",
+" >  )  > !>%!&  ",
+"  !-!&!  >) !&  ",
+"   )!)    , ,   ",
+"    !           ",
+"    *           ",
+"                "};
